--- a/Xeno-Core/Xeno-Core.vcxproj
+++ b/Xeno-Core/Xeno-Core.vcxproj
@@ -111,7 +111,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='XenoWeb|Win32'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin\$(Configuration)\Intermediates\</IntDir>
-    <IncludePath>$(ProjectDir)\ext\freetype\include;$(SolutionDir)\Dependencies\GLEW\include;$(SolutionDir)\Dependencies\GLFW\include;$(SolutionDir)\Dependencies\FreeImage\include;$(SolutionDir)\Dependencies\OpenAL\include;$(SolutionDir)\Dependencies\libvorbis\include;$(SolutionDir)\Dependencies\libogg\include;D:\Visual Studio Projects\emsdk-portable-64bit\emscripten\1.37.20\system\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\ext\freetype\include;$(SolutionDir)\Dependencies\GLEW\include;$(SolutionDir)\Dependencies\GLFW\include;$(SolutionDir)\Dependencies\FreeImage\include;$(SolutionDir)\Dependencies\OpenAL\include;$(SolutionDir)\Dependencies\libvorbis\include;$(SolutionDir)\Dependencies\libogg\include;D:\Visual Studio Projects\emsdk-portable-64bit\emscripten\1.37.20\system\include;E:\Softwares\VisualStudio Projects\Emscripten\emscripten\1.35.0\system\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\Dependencies\GLEW\lib;$(SolutionDir)\Dependencies\GLFW\lib-vc2015;$(SolutionDir)\Dependencies\OpenAL\libs\Win32;$(SolutionDir)\Dependencies\libogg\lib;$(SolutionDir)\Dependencies\libvorbis\lib;$(SolutionDir)\Dependencies\FreeImage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
